# warchive

./: .gitattributes  .gitignore  CHANGELOG.md  DECRYPTION.md  LICENSE  README.md  TODO.md  deploy.ps1  pyproject.toml  requirements.txt  test_embed_incremental.py  test_gpu_flag.py  test_retrieval.py  test_wa_embed.py  test_wa_mcp.py  test_wa_mcp_client.py  test_wa_normalize.py  test_wa_translit.py  wa_embed.py  wa_mcp.py  wa_normalize.py  wa_search.py  wa_translit.py
reference/: README.md
tests/: README.md  test_embed_incremental.py  test_gpu_flag.py  test_wa_mcp.py  test_wa_normalize.py  test_wa_translit.py
